--- a/client/index.css
+++ b/client/index.css
@@ -15,7 +15,7 @@ body{
 }
 
 .container{
-    min-height: calc(60vh);
+    min-height: calc(85vh);
     padding-bottom: 10px;
 }
 
@@ -32,6 +32,7 @@ body{
     position: relative;
     bottom: 0;
     left: 0;
+    margin-top: 30px;
 }
 
 
