A lot of changes made to homeview and almost all css-files due to font change, map added

--- a/client/index.css
+++ b/client/index.css
@@ -23,7 +23,7 @@ body {
     padding: 0;
 }
 
-.container {
+.git  {
     min-height: calc(60vh);
     padding-bottom: 10px;
     min-width: fit-content;
