--- a/client/sell.css
+++ b/client/sell.css
@@ -59,6 +59,7 @@
     max-width: 1000px;
     margin: 0 auto;
     color: #000000;
+    font-family: 'Brandon Grotesque Regular';
     /* Set text color */
 }
 
@@ -133,6 +134,7 @@ textarea[class="sellinput"] {
     border: 1px solid #ccc;
     border-radius: 20px;
     box-sizing: border-box;
+    font-family: 'Brandon Grotesque Regular';
 }
 
 button[id="submitCreateAd"] {
@@ -192,6 +194,7 @@ button[id="submitCreateAd"]:hover {
     /* Set text color */
     text-align: center;
     font-size: 20px;
+    font-family: 'Brandon Grotesque Regular';
     /* Increase the font size */
 }
 
