Problem with cardAds. Will try to solve later

--- a/client/homeview.css
+++ b/client/homeview.css
@@ -163,7 +163,8 @@
 /* Modal title */
 .quantity-modal-label,
 .price-modal-label,
-.seller-modal-label {
+.seller-modal-label,
+.cookDate-modal-label {
     font-family: 'Brandon Grotesque Bold';
     color: #000;
 }
