--- a/client/profile.css
+++ b/client/profile.css
@@ -1,5 +1,6 @@
 /* profile.css */
 
+
 #profileHeader{
     background-color: #2f5d8b;
     color: white;
@@ -9,12 +10,39 @@
 .profile-navbar {
     margin-right: 0%;
     margin-left: 20%;
+    width: 40%;
     overflow: hidden; 
     display: flex; 
     align-items: center; 
     padding-left: 0px;
-    background-color: #24517e;
-    color: white; 
+    background-color: white;
+    color: black; 
+}
+
+.boldText {
+    font-weight: bold;
+}
+
+.profileH1 {
+    margin-left: 0%;
+    font-weight: bold; 
+    padding: 15px
+}
+
+.profileH2 {
+    font-weight: bold; 
+    padding: 5px
+}
+
+.profileA {
+    width: 10%;
+}
+
+.accountInfo {
+    float: right;
+    width: 30%;
+    overflow: hidden; 
+    margin-right: 3%;
 }
 
 .profile-navbar li{
@@ -34,19 +62,22 @@
  }
 
  .profile-menu {
+    margin-left: 3%;
     overflow: hidden; 
     width: 20%;
     float: left; 
+    text-decoration: none;
 }
 
 .profile-menu u{
     list-style-type: none;
-    background-color: #263a4e;
+    background-color: #006267;
     padding: 0px;
     margin: 0px; 
     overflow: hidden;
     float: left;
     margin-left: 0px;
+    text-decoration: none;
 }
 
 .profile-menu a{
@@ -58,11 +89,14 @@
 }
 
 .profile-menu a:hover{
-    background-color: #1a2834;
+    background-color: #003b3e;
 }
 
 #newPasswordForm, #changePhonenumberForm, #settingsForm {
     margin-left: 20%;
+    margin-right: 20%;
+    width: 50%;
+    overflow: hidden;
 }
 
 .purchasehistory-Navbar{
